- improve auth.service - improve test
